--- a/style.css
+++ b/style.css
@@ -8,6 +8,14 @@ nav {
   border-bottom: 2px solid black;
 }
 
+footer {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+  border-top: 2px solid black;
+}
+
 a {
   text-decoration: none;
 }
