--- a/style.css
+++ b/style.css
@@ -13,6 +13,14 @@
   .moreabout {
     min-width: 300px;
   }
+
+  .navbutton {
+    font-size: small;
+  }
+
+  .activenavbutton {
+    font-size: small;
+  }
 }
 
 nav {
@@ -21,6 +29,7 @@ nav {
   flex-wrap: wrap;
   justify-content: center;
   border-bottom: 2px solid black;
+  padding: 1em 0 0.5em 0;
 }
 
 footer {
@@ -47,20 +56,20 @@ body {
   color: #0069D9;
   border: 2px solid #0069D9;
   padding: 0.5em 1em 0.5em 1em;
-  font-size: large;
+
   border-radius: 15px;
   cursor: default;
-  margin: 1em 0.5em 1em 0.5em;
+  margin: 0 0.5em 0.5em 0.5em;
 }
 
 .navbutton {
   color: black;
   padding: 0.5em 1em 0.5em 1em;
-  font-size: large;
+
   border-radius: 15px;
   border: 2px solid black;
   cursor: default;
-  margin: 1em 0.5em 1em 0.5em;
+  margin: 0 0.5em 0.5em 0.5em;
 }
 
 .caption {
